# MariUsdPlugins

./: CMakeLists.txt  GeoData.cpp  GeoData.h  LICENSE.txt  MariHostConfig.h  ModelData.cpp  ModelData.h  README.txt  UsdReader.cpp  UsdReader.h  license.txt  pxrMariUsdReaderPlugin.cpp  pxrMariUsdReaderPlugin.h
nodes/: mriUsdPreviewSurface.xml
plugins/fnUsdMeshImport/: GeoData.cpp  GeoData.h  MariHostConfig.h  ModelData.cpp  UsdReader.cpp  UsdReader.h  pxrMariUsdReaderPlugin.cpp  pxrMariUsdReaderPlugin.h
python/: __init__.py  usdExportManagerTab.py  usdLoaderTab.py  usdMultiShaderExportDialog.py  usdShadeExport.py  usdShadeExportProofOfConcept.py  usdShadeExport_Arnold.py  usdShadeExport_PRMan.py  usdShadeExport_PrincipledBRDF.py  usdShadeExport_UsdPreview.py  usdShader.py
shaders/: mriUsdPreviewSurfaceFuncs.glslc  mriUsdPreviewSurfaceFuncs.glslh
